# TouristManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  addpackage.cpp  addpackage.h  addpackage.ui  databaseheader.h  findpackage.cpp  findpackage.h  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registertourist.cpp  registertourist.h  registertourist.ui  resource.qrc  resource.qrc.autosave
